configFiles/kubernetes/auctionDataManager.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: auctiondatamanager
spec:
  replicas: 1
  template:
    metadata:
      name: auctiondatamanager
      labels:
        app: auction
        tier: dataManager
        impl: auctiondatamanager
    spec:
      containers:
      - image: hrosenbe/weathervane-auctiondatamanager:1.2.0
        name: auctiondatamanager
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - cat
            - /loadData.pl
          initialDelaySeconds: 15
          periodSeconds: 10
