configFiles/kubernetes/auctionbidservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auctionbidservice
  labels:
    app: auction
    tier: backend
    type: auctionBidServer
    impl: auctionbidservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auction
      tier: backend
      type: auctionBidServer
      impl: auctionbidservice
  template:
    metadata:
      name: auctionbidservice
      labels:
        app: auction
        tier: backend
        type: auctionBidServer
        impl: auctionbidservice
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: wvrole
                operator: NotIn
                values:
                - driver
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            preference:
              matchExpressions:
              - key: wvrole
                operator: In
                values:
                - sut
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            preference:
              matchExpressions:
              - key: wvw1i1
                operator: Exists
      containers:
      - image: repository/weathervane-auctionbidservice:1.2.0
        name: auctionbidservice
        imagePullPolicy: IfNotPresent
        ports: 
        - containerPort: 8080
          name: httpport
          protocol: TCP
        - containerPort: 8443
          name: httpsport
          protocol: TCP
        - containerPort: 9090
          name: jmxport
          protocol: TCP
        resources:
          requests:
            cpu: 1
            memory: 8Gi
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -i
            - -c
            - 'jps | grep -Eq Bootstrap'
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -i
            - -c
            - 'curl -s http://127.0.0.1:8080/auction/healthCheck | grep -Eq alive'
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: auctionbidservice
  labels:
    app: auction
    tier: backend
    type: auctionBidServer
    impl: auctionbidservice
spec:
  type: NodePort
  ports:
  - port: 8080
    name: httpport
  - port: 8443
    name: httpsport
  - port: 9090
    name: jmxport
  selector:
    app: auction
    tier: backend
    type: auctionBidServer
    impl: auctionbidservice
