configFiles/kubernetes/auctionworkloadcontroller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wkldcontroller
  labels:
    app: auction
    tier: driver
    type: controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auction
      tier: driver
      type: controller
  template:
    metadata:
      name: wkldcontroller
      labels:
        app: auction
        tier: driver
        type: controller
    spec:
      containers:
      - image: repository/weathervane-auctionworkloaddriver:2.0.0
        name: wkldcontroller
        imagePullPolicy: IfNotPresent
        ports: 
        - containerPort: 7500
          name: wklddriverport
          protocol: TCP
        resources:
          requests:
            cpu: 1
            memory: 2Gi
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -i
            - -c
            - 'jps | grep -Eq JarLauncher'
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -i
            - -c
            - 'curl -s http://127.0.0.1:7500/driver/up | grep -Eq true'
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: wkldcontroller
  labels:
    app: auction
    tier: driver
    type: controller
spec:
  type: LoadBalancer
  ports:
  - port: 7500
    name: wklddriverport
  selector:
        app: auction
        tier: driver
        type: controller
