configFiles/kubernetes/auctionworkloaddriver.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wklddriver
  labels:
    app: auction
    tier: driver
    type: node
    impl: wklddriver
spec:
  serviceName: wklddriver
  selector:
    matchLabels:
      app: auction
      tier: driver
      type: node
      impl: wklddriver
  replicas: 1
  template:
    metadata:
      name: wklddriver
      labels:
        app: auction
        tier: driver
        type: node
        impl: wklddriver
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: wvrole
                operator: NotIn
                values:
                - sut
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            preference:
              matchExpressions:
              - key: wvrole
                operator: In
                values:
                - driver
      containers:
      - image: repository/weathervane-auctionworkloaddriver:2.0.0
        name: wklddriver
        imagePullPolicy: IfNotPresent
        ports: 
        - containerPort: 80
          name: wklddriverport
          protocol: TCP
        - containerPort: 9090
          name: jmxport
          protocol: TCP
        resources:
          requests:
            cpu: 1
            memory: 6Gi
---
apiVersion: v1
kind: Service
metadata:
  name: wklddriver
  labels:
    app: auction
    tier: driver
    type: node
    impl: wklddriver
spec:
  clusterIP: None
  ports:
  - port: 80
    name: wklddriverport
  - port: 9090
    name: jmxport
  selector:
    app: auction
    tier: driver
    type: node
    impl: wklddriver
