configFiles/kubernetes/bidservice.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: auctionbidservice
spec:
  replicas: 1
  template:
    metadata:
      name: auctionbidservice
      labels:
        app: auction
        tier: backend
        type: appServer
        impl: auctionbidservice
    spec:
      containers:
      - image: hrosenbe/weathervane-auctionbidservice:1.2.0
        name: auctionbidservice
        imagePullPolicy: IfNotPresent
        ports: 
        - containerPort: 8080
          name: httpport
          protocol: TCP
        - containerPort: 8443
          name: httpsport
          protocol: TCP
        resources:
          requests:
            cpu: 1
            memory: 8Gi
          limits:
            cpu: 2
            memory: 8Gi
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -i
            - -c
            - 'jps | grep -Eq Bootstrap'
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -i
            - -c
            - 'curl -s http://127.0.0.1:8080/auction/healthCheck | grep -Eq alive'
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: auctionbidservice
spec:
  type: NodePort
  ports:
  - port: 8080
    name: httpport
  - port: 8443
    name: httpsport
  selector:
    app: auction
    tier: backend
    type: appServer
    impl: auctionbidservice
