configFiles/kubernetes/cassandra.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cassandra
  labels:
    app: auction
    tier: data
    type: nosqlServer
    impl: cassandra
spec:
  serviceName: cassandra
  selector:
    matchLabels:
      app: auction
      tier: data
      type: nosqlServer
      impl: cassandra
  replicas: 3
  template:
    metadata:
      labels:
        app: auction
        tier: data
        type: nosqlServer
        impl: cassandra
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: wvrole
                operator: NotIn
                values:
                - driver
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            preference:
              matchExpressions:
              - key: wvrole
                operator: In
                values:
                - sut
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            preference:
              matchExpressions:
              - key: wvw1i1
                operator: Exists
      terminationGracePeriodSeconds: 1800
      containers:
      - image: repository/weathervane-cassandra:1.2.0
        name: cassandra
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 7000
          name: intra-node
        - containerPort: 7001
          name: tls-intra-node
        - containerPort: 7199
          name: jmx
        - containerPort: 9042
          name: cql
        resources:
          requests:
            cpu: 1
            memory: 8Gi
        lifecycle:
          preStop:
            exec:
              command: 
              - /bin/sh
              - -c
              - nodetool drain
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -i
            - -c
            - 'nodetool status | grep $POD_IP | grep -Eq UN'
          initialDelaySeconds: 15
          timeoutSeconds: 5
        volumeMounts:
        - name: cassandra-data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: cassandra-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 100Gi
      storageClassName: fast
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: auction
    tier: data
    type: nosqlServer
    impl: cassandra
  name: cassandra
spec:
  clusterIP: None
  ports:
  - port: 9042
    name: cql
  selector:
    app: auction
    tier: data
    type: nosqlServer
    impl: cassandra
