configFiles/kubernetes/ingressControllerNginxService.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-controller-nginx
  labels:
    type: appInstance
    app: ingress-controller-nginx
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  - name: https
    port: 443
    targetPort: 443
    protocol: TCP
  selector:
    app: ingress-controller-nginx
