configFiles/kubernetes/mongod.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: mongod
spec:
  serviceName: mongo
  replicas: 1
  template:
    metadata:
      name: mongod
      labels:
        app: auction
        tier: nosql
        impl: mongod
    spec:
      containers:
      - image: hrosenbe/weathervane-mongodb:1.1.0
        name: mongod
        imagePullPolicy: Always
        volumeMounts:
        - name: mongod-data
          mountPath: /mnt/mongoData
        ports: 
        - containerPort: 27017 
          name: mongodport
          protocol: TCP
  volumeClaimTemplates:
  - metadata:
      name: mongod-data
    spec:
      resources: 
        requests:
          storage: 200Gi
      accessModes:
      - ReadWriteOnce
      storageClassName: fast
---
apiVersion: v1
kind: Service
metadata:
  name: mongod
spec:
  clusterIP: None
  ports:
  - port: 27017
    targetPort: mongodport
  selector:
    app: auction
    tier: nosql
    impl: mongod
