configFiles/kubernetes/nginx.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nginx
  labels:
    app: auction
    tier: backend
    type: webServer
    impl: nginx
spec:
  serviceName: nginx
  replicas: 1
  selector:
    matchLabels:
      app: auction
      tier: backend
      type: webServer
      impl: nginx
  template:
    metadata:
      name: nginx
      labels:
        app: auction
        tier: backend
        type: webServer
        impl: nginx
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: wvrole
                operator: NotIn
                values:
                - driver
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            preference:
              matchExpressions:
              - key: wvrole
                operator: In
                values:
                - sut
      containers:
      - image: repository/weathervane-nginx:1.2.0
        name: nginx
        imagePullPolicy: IfNotPresent
        ports: 
        - containerPort: 80
          name: httpport
          protocol: TCP
        - containerPort: 443
          name: httpsport
          protocol: TCP
        resources:
          requests:
            cpu: 1
            memory: 8Gi
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -i
            - -c
            - 'ps x | grep -v grep | grep -Eq master'
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -i
            - -c
            - 'curl -s -w "%{http_code}\n" -o /dev/null http://127.0.0.1:80'
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        volumeMounts:
        - name: nginx-cache
          mountPath: /var/cache/nginx
  volumeClaimTemplates:
  - metadata:
      name: nginx-cache
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
      storageClassName: fast
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: auction
    tier: backend
    type: webServer
    impl: nginx
spec:
  type: LoadBalancer
  ports:
  - port: 80
    name: httpport
  - port: 443
    name: httpsport
  selector:
    app: auction
    tier: backend
    type: webServer
    impl: nginx
