configFiles/kubernetes/postgresql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql
  labels:
    app: auction
    tier: data
    type: dbServer
    impl: postgresql
spec:
  serviceName: postgresql
  selector:
    matchLabels:
      app: auction
      tier: data
      type: dbServer
      impl: postgresql
  replicas: 1
  template:
    metadata:
      name: postgresql
      labels:
        app: auction
        tier: data
        type: dbServer
        impl: postgresql
    spec:
      containers:
      - image: hrosenbe/weathervane-postgresql:1.2.0
        name: postgresql
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: postgresql-data
          mountPath: /mnt/dbData/postgresql
        - name: postgresql-logs
          mountPath: /mnt/dbLogs/postgresql
        ports: 
        - containerPort: 5432
          name: postgresqlport
          protocol: TCP
        resources:
          requests:
            cpu: 1
            memory: 8Gi
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -i
            - -c
            - /usr/pgsql-9.3/bin/pg_isready -h 127.0.0.1 -p 5432
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -i
            - -c
            - /usr/pgsql-9.3/bin/pg_isready -h 127.0.0.1 -p 5432
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1        
  volumeClaimTemplates:
  - metadata:
      name: postgresql-data
    spec:
      resources: 
        requests:
          storage: 20Gi
      accessModes:
      - ReadWriteOnce
      storageClassName: fast
  - metadata:
      name: postgresql-logs
    spec:
      resources: 
        requests:
          storage: 20Gi
      accessModes:
      - ReadWriteOnce
      storageClassName: fast
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  labels:
    app: auction
    tier: data
    type: dbServer
    impl: postgresql
spec:
  clusterIP: None
  ports:
  - port: 5432
    name: postgresqlport
  selector:
    app: auction
    tier: data
    type: dbServer
    impl: postgresql
