configFiles/kubernetes/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  labels:
    app: auction
    tier: backend
    type: msgServer
    impl: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auction
      tier: backend
      type: msgServer
      impl: rabbitmq
  template:
    metadata:
      name: rabbitmq
      labels:
        app: auction
        tier: backend
        type: msgServer
        impl: rabbitmq
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: wvrole
                operator: NotIn
                values:
                - driver
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            preference:
              matchExpressions:
              - key: wvrole
                operator: In
                values:
                - sut
      containers:
      - image: repository/weathervane-rabbitmq:1.2.0
        name: rabbitmq
        imagePullPolicy: IfNotPresent
        ports: 
        - containerPort: 5672
          name: nodeport
          protocol: TCP
        - containerPort: 25672
          name: peerport
          protocol: TCP
        resources:
          requests:
            cpu: 1
            memory: 4Gi
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - 'curl -f --user auction:auction 127.0.0.1:15672/api/healthchecks/node | grep -Eq ok'
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: auction
    tier: backend
    type: msgServer
    impl: rabbitmq
spec:
  ports:
  - port: 5672
    name: nodeport
  - port: 25672
    name: peerport
  selector:
    app: auction
    tier: backend
    type: msgServer
    impl: rabbitmq
