configFiles/kubernetes/tomcat.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tomcat
spec:
  replicas: 1
  template:
    metadata:
      name: tomcat
      labels:
        app: auction
        tier: backend
        type: appServer
        impl: tomcat
    spec:
      containers:
      - image: hrosenbe/weathervane-tomcat:1.2.0
        name: tomcat
        imagePullPolicy: IfNotPresent
        ports: 
        - containerPort: 8080
          name: httpport
          protocol: TCP
        - containerPort: 8443
          name: httpsport
          protocol: TCP
        resources:
          requests:
            cpu: 1
            memory: 8Gi
          limits:
            cpu: 2
            memory: 8Gi
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -i
            - -c
            - 'jps | grep -Eq Bootstrap'
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -i
            - -c
            - 'curl -s http://127.0.0.1:8080/auction/healthCheck | grep -Eq alive'
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
      - image: hrosenbe/weathervane-auctionappserverwarmer:1.2.0
        name: warmer
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 500Mi
          limits:
            cpu: 250m
            memory: 1Gi
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -i
            - -c
            - 'curl -s http://127.0.0.1:8888/warmer/healthCheck | grep -Eq alive'
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -i
            - -c
            - 'curl -s http://127.0.0.1:8888/warmer/ready | grep -Eq ready'
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat
spec:
  type: NodePort
  ports:
  - port: 8080
    name: httpport
  - port: 8443
    name: httpsport
  selector:
    app: auction
    tier: backend
    type: appServer
    impl: tomcat
