configFiles/kubernetes/zookeeper.yaml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: zookeeper
spec:
  serviceName: zookeeper
  replicas: 3
  template:
    metadata:
      name: zookeeper
      labels:
        app: auction
        tier: backend
        type: coordinationServer
        impl: zookeeper
    spec:
      containers:
      - image: hrosenbe/weathervane-zookeeper:1.2.0
        name: zookeeper
        imagePullPolicy: IfNotPresent
        ports: 
        - containerPort: 2181
          name: clientport
          protocol: TCP
        - containerPort: 2888
          name: peerport
          protocol: TCP
        - containerPort: 3888
          name: electionport
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
spec:
  clusterIP: None
  ports:
  - port: 2181
    name: clientport
  - port: 2888
    name: peerport
  - port: 3888
    name: electionport
  selector:
    app: auction
    tier: backend
    type: coordinationServer
    impl: zookeeper
